🚀 Rebrand: CTFd → Teck-Vision
- Suppression fichiers CTFd: CHANGELOG, CONTRIBUTING, SECURITY, etc.
- Suppression workflows GitHub Actions (.github/workflows/)
- README.md réécrit: présentation Teck-Vision avec équipe
- LICENSE changée: Apache 2.0 → MIT (Équipe Teck-Vision)
- Dockerfile: paths /opt/teck-vision
- docker-compose.yml: service teck-vision
- Scripts Python: docstrings Teck-Vision (serve.py, wsgi.py, manage.py)
- setup.cfg: metadata Teck-Vision

Équipe: Fatma Amri, Koussay Aydi, Mariem Baraket,
        Belgacem Balti, Omar Allagui
Encadrante: Mme. Sahar BEN YAALA

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,12 @@
+# Teck-Vision — Fichiers exclus du build Docker
 CTFd/logs/*.log
 CTFd/static/uploads
 CTFd/uploads
 CTFd/*.db
+*.db
 CTFd/uploads/**/*
 .ctfd_secret_key
+.teck_vision_secret_key
 .data
 .git
 .codecov.yml
