--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,13 @@
+# Teck-Vision — Configuration des tests
 [nosetests]
 stop=1
 verbosity=2
 with-coverage=1
 cover-package=CTFd
+
+[metadata]
+name = teck-vision
+version = 1.0.0
+description = Plateforme CTF DevSecOps
+author = Équipe Teck-Vision
+license = MIT
